// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Send render 1`] = `
<div>
  <div
    class="sc-4d880b92-0 fwseqv"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27120%27%20height=%2728%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="Utrust"
        data-nimg="intrinsic"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
      <noscript />
    </span>
  </div>
  <div
    class="sc-4d880b92-1 cCwZCH"
    data-testid="wrapper"
  >
    <header
      class="sc-4d880b92-2 jLouef"
    >
      Please fill the form to send Ethereum
    </header>
    <form
      class="sc-534f3407-6 hKasLc"
      id="transaction"
    >
      <div
        class="sc-2d2a1aa8-0 cxcNIV"
      >
        <label
          class="sc-2d2a1aa8-1 haCvit"
          for="from"
        >
          From
        </label>
        <input
          class="sc-2d2a1aa8-2 eQinJl"
          data-testid="from"
          id="from"
          placeholder="Your address"
          value=""
        />
      </div>
      <div
        class="sc-2d2a1aa8-0 cxcNIV"
      >
        <label
          class="sc-2d2a1aa8-1 haCvit"
          for="to"
        >
          To
        </label>
        <input
          class="sc-2d2a1aa8-2 eQinJl"
          data-testid="to"
          id="to"
          placeholder="Destination address"
          value=""
        />
      </div>
      <div
        class="sc-2d2a1aa8-0 cxcNIV"
      >
        <label
          class="sc-2d2a1aa8-1 haCvit"
          for="amount"
        >
          Amount
        </label>
        <input
          class="sc-2d2a1aa8-2 eQinJl"
          data-testid="amount"
          id="amount"
          placeholder="Ethereum amount"
          value=""
        />
      </div>
    </form>
    <footer
      class="sc-4d880b92-3 gunIol"
    >
      <button
        class="sc-4d880b92-4 hRpFqd"
        data-testid="send"
        form="transaction"
        type="submit"
      >
        Send
      </button>
    </footer>
  </div>
</div>
`;

exports[`Send send 1`] = `
<div>
  <div
    class="sc-4d880b92-0 fwseqv"
  >
    <span
      style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27120%27%20height=%2728%27/%3e"
          style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
        />
      </span>
      <img
        alt="Utrust"
        data-nimg="intrinsic"
        decoding="async"
        src="/Logo.svg"
        srcset="/Logo.svg 1x, /Logo.svg 2x"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
      <noscript />
    </span>
  </div>
  <div
    class="sc-4d880b92-1 cCwZCH"
    data-testid="wrapper"
  >
    <header
      class="sc-4d880b92-2 jLouef"
    >
      Transaction complete
    </header>
    <div
      class="sc-534f3407-1 cabieY"
      data-testid="success"
    >
      <div
        class="sc-534f3407-0 gksomd"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27100%27%20height=%27100%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="success"
            data-nimg="intrinsic"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </div>
      <div
        class="sc-534f3407-2 gTneqL"
      >
         You sent
      </div>
      <div
        class="sc-534f3407-3 feBzYV"
      >
        TEST_AMOUNT
         ETH
      </div>
      <hr
        class="sc-534f3407-4 gWNUMj"
      />
      <div
        class="sc-534f3407-2 gTneqL"
      >
        From
      </div>
      <div
        class="sc-534f3407-5 hezqVB"
      >
        TEST_FROM
      </div>
      <div
        class="sc-534f3407-2 gTneqL"
      >
        To
      </div>
      <div
        class="sc-534f3407-5 hezqVB"
      >
        TEST_TO
      </div>
    </div>
  </div>
</div>
`;
